src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_grouped_expressions_case4.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "PREFIX": {
            "prefix_token": {
              "token_type": "NOT",
              "literal": "!"
            },
            "right_hand_expression": {
              "INFIX": {
                "left_hand_expression": {
                  "BOOLEAN": {
                    "boolean_token": {
                      "token_type": "TRUE",
                      "literal": "TRUE"
                    }
                  }
                },
                "operator_token": {
                  "token_type": "EQUALS",
                  "literal": "=="
                },
                "right_hand_expression": {
                  "BOOLEAN": {
                    "boolean_token": {
                      "token_type": "TRUE",
                      "literal": "TRUE"
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
