src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_identifier_expression_case2.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "program": [
    {
      "EXPRESSION_STATEMENT": {
        "initial_expression_token": {
          "token_type": "IDENTIFIER",
          "literal": "varX"
        },
        "expression": {
          "IDENTIFIER": {
            "expression_precedence": "LOWEST",
            "identifier_token": {
              "token_type": "IDENTIFIER",
              "literal": "varX"
            }
          }
        }
      }
    }
  ]
}
