src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_if_expression_case2.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "IF": {
            "condition": {
              "INFIX": {
                "left_hand_expression": {
                  "IDENTIFIER": {
                    "identifier_token": {
                      "token_type": "IDENTIFIER",
                      "literal": "x"
                    }
                  }
                },
                "operator_token": {
                  "token_type": "LESSER_THAN",
                  "literal": "<"
                },
                "right_hand_expression": {
                  "IDENTIFIER": {
                    "identifier_token": {
                      "token_type": "IDENTIFIER",
                      "literal": "y"
                    }
                  }
                }
              }
            },
            "consequence": {
              "BLOCK": {
                "blocks": [
                  {
                    "EXPRESSION": {
                      "expression": {
                        "IDENTIFIER": {
                          "identifier_token": {
                            "token_type": "IDENTIFIER",
                            "literal": "x"
                          }
                        }
                      }
                    }
                  }
                ]
              }
            },
            "alternative": {
              "BLOCK": {
                "blocks": [
                  {
                    "EXPRESSION": {
                      "expression": {
                        "IDENTIFIER": {
                          "identifier_token": {
                            "token_type": "IDENTIFIER",
                            "literal": "y"
                          }
                        }
                      }
                    }
                  }
                ]
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
