src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_infix_expression_case5.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INFIX": {
            "left_hand_expression": {
              "PREFIX": {
                "prefix_token": {
                  "token_type": "MINUS",
                  "literal": "-"
                },
                "right_hand_expression": {
                  "INTEGER": {
                    "integer_token": {
                      "token_type": "INTEGER",
                      "literal": "5"
                    }
                  }
                }
              }
            },
            "operator_token": {
              "token_type": "MULTIPLY",
              "literal": "*"
            },
            "right_hand_expression": {
              "INTEGER": {
                "integer_token": {
                  "token_type": "INTEGER",
                  "literal": "10"
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
